--- a/backend/menu-service/src/main/resources/application.properties
+++ b/backend/menu-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path = /api
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/menuservice
-spring.datasource.username=jelle
+spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 
