Fix restaurant service mappings

--- a/backend/restaurant-service/src/main/resources/application.properties
+++ b/backend/restaurant-service/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name="restaurant-service"
 server.port=8083
+server.servlet.context-path=/api
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant-service-db
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
 
