--- a/backend/restaurant-service/src/main/resources/application.properties
+++ b/backend/restaurant-service/src/main/resources/application.properties
@@ -2,12 +2,8 @@ spring.application.name="restaurant-service"
 server.port=8083
 server.servlet.context-path=/api
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant-service-db
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/restaurantservice
+spring.datasource.username=jelle
 spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
-
-
