--- a/backend/restaurant-service/src/main/resources/application.properties
+++ b/backend/restaurant-service/src/main/resources/application.properties
@@ -1,9 +1,15 @@
-spring.application.name="restaurant-service"
-server.port=8083
+server.port=8081
+spring.application.name=restaurant-service
 server.servlet.context-path=/api
-spring.jpa.hibernate.ddl-auto=update
+
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurantservice
-spring.datasource.username=jelle
+spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.show-sql=true
+spring.datasource.driverClassName=org.postgresql.Driver
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
