--- a/frontend/kitchen/package.json
+++ b/frontend/kitchen/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kitchenfrontend",
+  "name": "kitchen",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,9 @@
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "sockjs-client": "^1.5.0",
+    "stompjs": "^2.3.3"
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
