Add eureka client and author

--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -1,1 +1,10 @@
+# Routing and application settings
+#
+# @Author Aron Hemmes
 
+server:
+  port: 8080
+
+spring:
+  application:
+    name: service-registry
