--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -8,3 +8,18 @@ server:
 spring:
   application:
     name: service-registry
+  cloud:
+    gateway:
+      routes:
+        - id: orderService
+          uri: lb://ORDER-SERVICE
+          predicates:
+            - Path=/api/**
+        - id: restaurantService
+          uri: lb://RESTAURANT-SERVICE
+          predicates:
+            - Path=/api/**
+        - id: menuService
+          uri: lb://MENU-SERVICE
+          predicates:
+            - Path=/api/**
