--- a/backend/restaurant-service/pom.xml
+++ b/backend/restaurant-service/pom.xml
@@ -60,6 +60,10 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
