--- a/backend/auth-service/src/main/resources/application.properties
+++ b/backend/auth-service/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=auth-service
 server.port=8085
+
+# JWT Application variables
+application.jwt.secretKey=cQAE9EzXNTexfGI6MSc4S86swdWGdn
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAfterDays=1
