--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -103,6 +103,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+            <version>3.3.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
