--- a/backend/auth-service/src/main/resources/application.properties
+++ b/backend/auth-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ application.jwt.tokenExpirationAfterDays=1
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/authservice
-spring.datasource.username=postgres
+spring.datasource.username=jelle
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 
