--- a/backend/order-service/pom.xml
+++ b/backend/order-service/pom.xml
@@ -77,6 +77,12 @@
 			<artifactId>spring-data-rest-webmvc</artifactId>
 			<version>3.3.3.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
