--- a/backend/order-service/pom.xml
+++ b/backend/order-service/pom.xml
@@ -83,6 +83,11 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-webmvc</artifactId>
+			<version>3.3.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
