--- a/backend/restaurant-service/src/main/resources/application-tests.properties
+++ b/backend/restaurant-service/src/main/resources/application-tests.properties
@@ -1,7 +1,7 @@
-jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
-spring.datasource.driverClassName=org.h2.Driver
+spring.profiles.active=tests
+spring.jpa.database=h2
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=create-drop
