--- a/frontend/kitchen/package.json
+++ b/frontend/kitchen/package.json
@@ -10,10 +10,12 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
