--- a/backend/menu-service/src/main/resources/application-test.properties
+++ b/backend/menu-service/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=tests
+spring.profiles.active=test
 spring.jpa.database=h2
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
