--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -85,6 +85,10 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
