--- a/backend/gateway/src/main/resources/application.properties
+++ b/backend/gateway/src/main/resources/application.properties
@@ -8,8 +8,14 @@ eureka.instance.prefer-ip-address=true
 # Zuul config
 zuul.prefix=/api
 zuul.ignored-services=*
-zuul.routes.gallery-service.path=/card-service/**
-zuul.routes.gallery-service.service-id=card-service
+zuul.routes.menu-service.path=/menu-service/**
+zuul.routes.menu-service.service-id=menu-service
+zuul.routes.order-service.path=/order-service/**
+zuul.routes.order-service.service-id=order-service
+zuul.routes.qr-service.path=/qr-service/**
+zuul.routes.qr-service.service-id=qr-service
+zuul.routes.restaurant-service.path=/restaurant-service/**
+zuul.routes.restaurant-service.service-id=restaurant-service
 zuul.routes.auth-service.path=/auth-service/**
 zuul.routes.auth-service.service-id=auth-service
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
