Update packages and Index
- Added react popup and react color
- Fix Index icon not found error
- Clean up and update Index css

--- a/frontend/admin-panel/package.json
+++ b/frontend/admin-panel/package.json
@@ -2,14 +2,19 @@
   "name": "admin-panel",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8762/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "reactjs-popup": "^2.0.4"
   },
   "scripts": {
     "start": "set PORT=3003 && react-scripts start",
@@ -31,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prop-types": "^15.7.2"
   }
 }
