--- a/.github/workflows/discovery-server.yml
+++ b/.github/workflows/discovery-server.yml
@@ -2,9 +2,7 @@ name: Discovery server CI
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
   
 jobs:
   test:
@@ -22,3 +20,13 @@ jobs:
     - name: Test with Maven
       working-directory: ./backend/discovery-server
       run: mvn -B test
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+    - name: Create artifact
+      working-directory: ./backend/discovery-server
+    - run: mvn -B package --file pom.xml
+    - run: mkdir staging && cp target/*.jar staging
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Package
+        path: staging
