--- a/.github/workflows/discovery-server.yml
+++ b/.github/workflows/discovery-server.yml
@@ -14,19 +14,21 @@ jobs:
       uses: actions/setup-java@v1.4.3
       with:
         java-version: 11
+
     - name: Build with Maven
       working-directory: ./backend/discovery-server
       run: mvn -B package -Dmaven.test.skip=true --file pom.xml
+    
     - name: Test with Maven
       working-directory: ./backend/discovery-server
       run: mvn -B test
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
+    
     - name: Create artifact
       working-directory: ./backend/discovery-server
-    - run: mvn -B package --file pom.xml
-    - run: mkdir staging && cp target/*.jar staging
+    - run: |
+        mvn -B package --file pom.xml
+        mkdir staging && cp target/*.jar staging  
     - uses: actions/upload-artifact@v2
       with:
-        name: Package
-        path: staging
+          name: Package
+          path: staging
