Update azure-pipelines.yml for Azure Pipelines Kitchen Frontend

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 
 - script: |
     displayName: 'installing npm'
-    workingDirectory: .frontend/kitchen
+    workingDirectory: ./frontend/kitchen
     npm install
     npm run build
   displayName: 'npm install and build'
