--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
+- main
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -17,7 +17,7 @@ steps:
 
 - script: |
     displayName: 'installing npm'
-    workingDirectory: ./frontend/kitchen
+    workingDirectory: frontend/kitchen
     npm install
     npm run build
   displayName: 'npm install and build'
