--- a/backend/discovery-server/pom.xml
+++ b/backend/discovery-server/pom.xml
@@ -37,23 +37,25 @@
     </dependencyManagement>
 
     <build>
+        <pluginManagement>
         <plugins>
             <plugin>
-                <!-- Build an executable JAR -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.dma.discoveryserver.DiscoveryServerApplication</mainClass>
-                        </manifest>
-                    </archive>
+                    <mainClass>com.dma.discoveryserver.DiscoveryServerApplication</mainClass>
+                    <layout>jar</layout>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
+        </pluginManagement>
     </build>
 
 
