Fix Authorization header not passed to microservices

--- a/backend/gateway/src/main/resources/application.properties
+++ b/backend/gateway/src/main/resources/application.properties
@@ -8,6 +8,7 @@ eureka.instance.prefer-ip-address=true
 # Zuul config
 zuul.prefix=/api
 zuul.ignored-services=*
+zuul.sensitive-headers=Cookie,Set-Cookie
 zuul.routes.menu-service.path=/menu-service/**
 zuul.routes.menu-service.service-id=menu-service
 zuul.routes.order-service.path=/order-service/**
