backend displays correct response. I set the response as global state in the app for testing purposes and now all the filters work as they need to. Added runner to the menu microservice to have dummy data and set db mode from 'update' to 'create-drop' for development purposes.

--- a/backend/menu-service/src/main/resources/application.properties
+++ b/backend/menu-service/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.driverClassName=org.postgresql.Driver
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+#set create-drop mode for development purposes
+spring.jpa.hibernate.ddl-auto=create-drop
