--- a/backend/discovery-server/Dockerfile
+++ b/backend/discovery-server/Dockerfile
@@ -1,7 +1,14 @@
-FROM openjdk:11-alpine
+FROM alpine:latest
+
+
+ENV JAVA_HOME="/usr/lib/jvm/default-jvm/"
+RUN apk add openjdk11
+
+# Has to be set explictly to find binaries 
+ENV PATH=$PATH:${JAVA_HOME}/bin
 
 EXPOSE 8761
 
-ADD target/*.jar app.jar
+ADD target/backend/discovery-server/target/*.jar app.jar
 
 ENTRYPOINT ["java","-jar","app.jar"]
