--- a/backend/discovery-server/Dockerfile
+++ b/backend/discovery-server/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:11
 
 EXPOSE 8761
 
-ADD target/backend/discovery-server/target/*.jar app.jar
+ADD /*.jar app.jar
 
 ENTRYPOINT ["java","-jar","app.jar"]
