--- a/backend/discovery-server/Dockerfile
+++ b/backend/discovery-server/Dockerfile
@@ -3,6 +3,6 @@ FROM openjdk:11
 EXPOSE 8761
 
 RUN PWD
-ADD /*.jar app.jar
+ADD target/discovery-*.jar app.jar
 
 ENTRYPOINT ["java","-jar","app.jar"]
