--- a/backend/discovery-server/Dockerfile
+++ b/backend/discovery-server/Dockerfile
@@ -2,7 +2,6 @@ FROM openjdk:11
 
 EXPOSE 8761
 
-RUN PWD
-ADD target/discovery-*.jar app.jar
+ADD target/*.jar app.jar
 
 ENTRYPOINT ["java","-jar","app.jar"]
