--- a/backend/database/Dockerfile
+++ b/backend/database/Dockerfile
@@ -29,7 +29,11 @@ USER postgres
 #       allows the RUN command to span multiple lines.
 RUN    /etc/init.d/postgresql start &&\
     psql --command "CREATE USER docker WITH SUPERUSER PASSWORD 'docker';" &&\
-    createdb -O docker docker
+    createdb -O docker docker &&\
+    createdb -O docker authservice &&\
+    createdb -O docker menuservice &&\
+    createdb -O docker orderservice &&\
+    createdb -O docker restaurantservice &&\
 
 # Adjust PostgreSQL configuration so that remote connections to the
 # database are possible.
