--- a/backend/menu-service/src/main/resources/application.properties
+++ b/backend/menu-service/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 #set create-drop mode for development purposes
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
