Hardcode gateway URI

--- a/frontend/admin-panel/package.json
+++ b/frontend/admin-panel/package.json
@@ -2,7 +2,7 @@
   "name": "admin-panel",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8762/",
+  "proxy": "https://dma-gateway.radiationservers.com/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
