--- a/frontend/kitchen/.env
+++ b/frontend/kitchen/.env
@@ -1,2 +1,2 @@
 REACT_APP_GATEWAY_URL='http://localhost:8762/'
-REACT_APP_WEBSOCKETS_URL='ws://localhost:8083/websockets/'
+REACT_APP_WEBSOCKETS_URL='ws://localhost:8083/websockets'
