--- a/frontend/kitchen/.env.production
+++ b/frontend/kitchen/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_GATEWAY_URL='https://dma-gateway.radiationservers.com/'
-REACT_APP_WEBSOCKETS_URL='ws://dma-order-service.radiationservers.com/websockets/'
+REACT_APP_WEBSOCKETS_URL='ws://dma-order-service.radiationservers.com/websockets'
